[gd_scene load_steps=12 format=3 uid="uid://cmvujjwc2jhhs"]

[ext_resource type="Script" uid="uid://5ji01ksycl64" path="res://Characters/goblin.gd" id="1_halkw"]
[ext_resource type="Texture2D" uid="uid://dcp46fp6hk6lg" path="res://Assets/goblin.png" id="1_pwexo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u6mjv"]
atlas = ExtResource("1_pwexo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu5tg"]
atlas = ExtResource("1_pwexo")
region = Rect2(2, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_macxp"]
atlas = ExtResource("1_pwexo")
region = Rect2(34, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyhpr"]
atlas = ExtResource("1_pwexo")
region = Rect2(66, 34, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utad2"]
atlas = ExtResource("1_pwexo")
region = Rect2(98, 34, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3s2j4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6mjv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu5tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_macxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyhpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utad2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nebt"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_halkw"]
size = Vector2(23, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_ipa0k"]
radius = 17.1172

[node name="Goblin" type="CharacterBody2D"]
script = ExtResource("1_halkw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3s2j4")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.190303

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6nebt")

[node name="DealDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DealDamage"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_halkw")

[node name="Hurtbox" type="Area2D" parent="."]
z_index = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_ipa0k")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
